<resources>
    <string name="app_name">喵酷随记</string>
    <string name="button1">测试页面</string>
    <string name="button2">建账</string>
    <string name="button3">选择账套</string>
    <string name="button4">删除账套</string>
    <string name="textView1">请选择账套</string>
    <string name="button5">关闭账套</string>
    <string name="title_dialog_setaccount">添加账套</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="title_dailog_selectdatabase">请选择账套</string>
    <string name="accountdatabase">账套</string>
    <string name="database_created">已创建</string>
    <string name="selected">已选择</string>
    <string name="title_dialog_deletedatabase">请选择需要删除的账套</string>
    <string name="noaccountdatabases">没有账套</string>
    <string name="useddatabase">当前正在使用的账套</string>
    <string name="database_confirmdelete">确认删除？该操作不可恢复！</string>
    <string name="deleteddatabase">已删除选中的账套</string>
    <string name="closedatabaseprompt">未关闭，无法删除</string>
    <string name="button6">科目编辑</string>
    <string name="duplicate_file_name">账套已存在</string>
    <string name="blank_file_name">请填写账套名称</string>
    <string name="illegal_file_name">账套名称非法</string>
    <string name="created_failed">账套创建失败</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">主页</string>
    <string name="title_detail">记账流</string>
    <string name="title_chart">图表</string>
    <string name="title_more">更多</string>
    <string name="fragment_more_title">更多</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>